@startuml
hide circle

entity Game {
  * id: SERIAL [PK]
  --
  title: VARCHAR
  description: TEXT
  is_team_game: BOOL
  placement_policy: ENUM("forbidden", "required")
  score_policy: ENUM("forbidden", "required", "optional")
  score_higher_is_better: BOOL | NULL
  rating_uses_score: BOOL | NULL
  allow_draws: BOOL
}

entity PlayerRuleset {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  min_players: INT
  max_players: INT
}

entity TeamRuleset {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  min_teams: INT
  max_teams: INT
  min_players_per_team: INT
  max_players_per_team: INT
}

entity Match {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  club_id: INT [FK -> Club.id]
  created_by_account_id: INT [FK -> Account.id]
  date: DATE
}

entity Club {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
  description: TEXT
}

entity Account {
  * id: SERIAL [PK]
  --
  role_id: INT [FK -> Role.id]
  username: VARCHAR UNIQUE
  hashed_password: TEXT
  email: TEXT
}

entity AccountClub{
    * account_club_id: SERIAL [PK]
    --
    account_id: INT [FK -> Account.id]
    club_id: INT [FK -> Club.id]
    account_club_role_id: INT [FK -> ClubRole.id]
}

entity MatchPlayer{
    * match_player_id: SERIAL [PK]
    --
    match_id: INT [FK -> Match.id]
    player_id: INT [FK -> Player.id]
    outcome: TEXT
    placement: INT | NULL
    score: FLOAT | NULL
}

entity Player {
  * id: SERIAL [PK]
  --
  club_id: INT [FK -> Club.id]
  name: TEXT
  surname: TEXT
}

entity Role {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
}

entity ClubRole {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
}


Match }o--|| Game
Match }o--|| Club
Match }o--|| Account
Match ||-o{ MatchPlayer
Player }|---|| Club
Player ||---|{ MatchPlayer
Account }|--|{ Role
Account ||--o{ AccountClub
Club ||--|{ AccountClub
AccountClub }|--|| ClubRole
PlayerRuleset |o--|{ Game
TeamRuleset |o--|{ Game


@enduml